// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SeverityBadge > snapshots > renders clear severity level correctly 1`] = `
<span
  aria-label="Severity: All clear"
  class="inline-flex items-center rounded-full border font-medium tracking-wide bg-emerald-500/10 text-emerald-400 border-emerald-500/30 px-2.5 py-1 gap-1.5 text-sm"
  data-severity="clear"
  data-testid="severity-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-check-big h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21.801 10A10 10 0 1 1 17 3.335"
    />
    <path
      d="m9 11 3 3L22 4"
    />
  </svg>
  <span>
    ALL CLEAR
  </span>
</span>
`;

exports[`SeverityBadge > snapshots > renders critical level with pulsing animation 1`] = `
<span
  aria-label="Severity: Critical"
  class="inline-flex items-center rounded-full border font-medium tracking-wide bg-red-500/10 text-red-400 border-red-500/30 px-2.5 py-1 gap-1.5 text-sm animate-pulse-critical"
  data-severity="critical"
  data-testid="severity-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-x h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="m15 9-6 6"
    />
    <path
      d="m9 9 6 6"
    />
  </svg>
  <span>
    CRITICAL
  </span>
</span>
`;

exports[`SeverityBadge > snapshots > renders critical severity level correctly 1`] = `
<span
  aria-label="Severity: Critical"
  class="inline-flex items-center rounded-full border font-medium tracking-wide bg-red-500/10 text-red-400 border-red-500/30 px-2.5 py-1 gap-1.5 text-sm"
  data-severity="critical"
  data-testid="severity-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-x h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="m15 9-6 6"
    />
    <path
      d="m9 9 6 6"
    />
  </svg>
  <span>
    CRITICAL
  </span>
</span>
`;

exports[`SeverityBadge > snapshots > renders high severity level correctly 1`] = `
<span
  aria-label="Severity: High activity"
  class="inline-flex items-center rounded-full border font-medium tracking-wide bg-orange-500/10 text-orange-400 border-orange-500/30 px-2.5 py-1 gap-1.5 text-sm"
  data-severity="high"
  data-testid="severity-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-triangle-alert h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
    />
    <path
      d="M12 9v4"
    />
    <path
      d="M12 17h.01"
    />
  </svg>
  <span>
    HIGH ACTIVITY
  </span>
</span>
`;

exports[`SeverityBadge > snapshots > renders low severity level correctly 1`] = `
<span
  aria-label="Severity: Low activity"
  class="inline-flex items-center rounded-full border font-medium tracking-wide bg-green-500/10 text-green-400 border-green-500/30 px-2.5 py-1 gap-1.5 text-sm"
  data-severity="low"
  data-testid="severity-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-check-big h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21.801 10A10 10 0 1 1 17 3.335"
    />
    <path
      d="m9 11 3 3L22 4"
    />
  </svg>
  <span>
    LOW ACTIVITY
  </span>
</span>
`;

exports[`SeverityBadge > snapshots > renders md size variant correctly 1`] = `
<span
  aria-label="Severity: Moderate activity"
  class="inline-flex items-center rounded-full border font-medium tracking-wide bg-yellow-500/10 text-yellow-400 border-yellow-500/30 px-2.5 py-1 gap-1.5 text-sm"
  data-severity="medium"
  data-testid="severity-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <span>
    MODERATE ACTIVITY
  </span>
</span>
`;

exports[`SeverityBadge > snapshots > renders medium severity level correctly 1`] = `
<span
  aria-label="Severity: Moderate activity"
  class="inline-flex items-center rounded-full border font-medium tracking-wide bg-yellow-500/10 text-yellow-400 border-yellow-500/30 px-2.5 py-1 gap-1.5 text-sm"
  data-severity="medium"
  data-testid="severity-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <span>
    MODERATE ACTIVITY
  </span>
</span>
`;

exports[`SeverityBadge > snapshots > renders sm size variant correctly 1`] = `
<span
  aria-label="Severity: Moderate activity"
  class="inline-flex items-center rounded-full border font-medium tracking-wide bg-yellow-500/10 text-yellow-400 border-yellow-500/30 px-2 py-0.5 gap-1 text-xs"
  data-severity="medium"
  data-testid="severity-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert h-3 w-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <span>
    MODERATE ACTIVITY
  </span>
</span>
`;

exports[`SeverityBadge > snapshots > renders with count 1`] = `
<span
  aria-label="Severity: High activity, 5 events"
  class="inline-flex items-center rounded-full border font-medium tracking-wide bg-orange-500/10 text-orange-400 border-orange-500/30 px-2.5 py-1 gap-1.5 text-sm"
  data-severity="high"
  data-testid="severity-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-triangle-alert h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
    />
    <path
      d="M12 9v4"
    />
    <path
      d="M12 17h.01"
    />
  </svg>
  <span>
    HIGH ACTIVITY
  </span>
  <span
    class="ml-0.5 font-semibold"
    data-testid="severity-badge-count"
  >
    (
    5
    )
  </span>
</span>
`;

exports[`SeverityBadge > snapshots > renders with custom className 1`] = `
<span
  aria-label="Severity: Low activity"
  class="inline-flex items-center rounded-full border font-medium tracking-wide bg-green-500/10 text-green-400 border-green-500/30 px-2.5 py-1 gap-1.5 text-sm custom-margin ml-4"
  data-severity="low"
  data-testid="severity-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-check-big h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21.801 10A10 10 0 1 1 17 3.335"
    />
    <path
      d="m9 11 3 3L22 4"
    />
  </svg>
  <span>
    LOW ACTIVITY
  </span>
</span>
`;
